Add geocoding and a LocationService

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
 <p>Hello, Weather app!</p>
-It is currently <%= @weather[:temperature] %>° F and <%= @weather[:status] %>.
+It is currently <%= @weather[:temperature] %>° F and <%= @weather[:status] %> in <%= @location[:postal_code] %>.
