--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,9 @@
-<p>Hello, Weather app!</p>
+<div class="container-sm text-center border mt-4 p-4">
+  <h1>Hello, Weather app!</h1>
 
-<%= form_with(url: "/search", method: "get") do %>
-  <%= label_tag(:query, "Get the current weather:") %>
-  <%= text_field_tag(:query) %>
-  <%= submit_tag("Search") %>
-<% end %>
+  <%= form_with(url: "/search", method: "get") do %>
+    <p><%= label_tag(:query, "Get the current weather for any location:") %></p>
+    <p><%= text_field_tag(:query, nil, placeholder: "476 5th Ave, New York, NY 10018", size: 30) %></p>
+    <p><%= submit_tag("Search", class: "btn btn-primary") %></p>
+  <% end %>
+</div>
